// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Syncer > Schema 생성 > actionGenerateSchemas - generated 파일 생성 1`] = `
[
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > handleEntityChange > handleEntityChange - step 검증 > step 1`] = `
[
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > handleModelOrFrameChange > 여러 model 동시 처리 1`] = `
[
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > overwrite 옵션 > entity 템플릿 - parentId 옵션 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > overwrite 옵션 > overwrite: false - 파일 미존재 시 정상 생성 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > overwrite 옵션 > overwrite: true - 항상 파일 생성 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 기본 기능 > 에러 처리 > 빈 배열 입력 → 정상 처리 1`] = `
[
  "doSyncActions",
]
`;

exports[`Syncer > 기본 기능 > 에러 처리 > 알 수 없는 파일 타입 → unknown 분류 1`] = `
[
  "doSyncActions",
]
`;

exports[`Syncer > 기본 기능 > 파일 타입 분류 > 지원하는 파일 타입 분류 1`] = `
[
  "doSyncActions",
]
`;

exports[`Syncer > 동기화 액션 > actionGenerateSchemas > generated 파일 생성 1`] = `
[
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 변경 감지 핸들러 > handleEntityChange > step 검증 > step 1`] = `
[
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 변경 감지 핸들러 > handleModelOrFrameChange > 여러 model 동시 처리 1`] = `
[
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 에러 처리 > 빈 배열 입력 → 정상 처리 1`] = `
[
  "doSyncActions",
]
`;

exports[`Syncer > 에러 처리 > 알 수 없는 파일 타입 → unknown 분류 1`] = `
[
  "doSyncActions",
]
`;

exports[`Syncer > 워크플로우 테스트 > doSyncActions > config 파일 변경 → .sonamu.env 재생성 1`] = `
[
  "doSyncActions",
  "actionSyncConfig",
]
`;

exports[`Syncer > 워크플로우 테스트 > doSyncActions > generated 파일 변경 → 타겟에 복사 1`] = `
[
  "doSyncActions",
  "handleTypesOrFunctionsOrGeneratedChange",
]
`;

exports[`Syncer > 템플릿 생성 > overwrite 옵션 > entity 템플릿 - parentId 옵션 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > overwrite 옵션 > overwrite: false + 파일 미존재 → 정상 생성 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > overwrite 옵션 > overwrite: true → 항상 파일 생성 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > entity 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > generated 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > generated_http 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > generated_sso 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > init_types 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 생성 > 템플릿 타입별 테스트 > model_test 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > entity 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > generated 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > generated_http 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > generated_sso 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > init_types 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 템플릿 타입 > model_test 템플릿 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 통합 시나리오 > Entity 변경 → 전체 플로우 1`] = `
[
  "doSyncActions",
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "handleTypesOrFunctionsOrGeneratedChange",
]
`;

exports[`Syncer > 통합 시나리오 > Model + Entity 동시 변경 1`] = `
[
  "doSyncActions",
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "handleTypesOrFunctionsOrGeneratedChange",
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 파일 변경 감지 워크플로우 > config 파일 변경 → .sonamu.env 재생성 1`] = `
[
  "doSyncActions",
  "actionSyncConfig",
]
`;

exports[`Syncer > 파일 변경 감지 워크플로우 > generated 파일 변경 → 타겟에 복사 1`] = `
[
  "doSyncActions",
  "handleTypesOrFunctionsOrGeneratedChange",
]
`;

exports[`Syncer > 파일 변경 감지 워크플로우 > model + types 파일 동시 변경 1`] = `
[
  "doSyncActions",
  "handleTypesOrFunctionsOrGeneratedChange",
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 파일 변경 감지 워크플로우 > model 파일 변경 → http 재생성 1`] = `
[
  "doSyncActions",
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 파일 변경 감지 워크플로우 > 여러 model 파일 동시 변경 1`] = `
[
  "doSyncActions",
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "generateTemplate",
  "renderTemplate",
  "render",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > 파일 타입 분류 > 지원하는 파일 타입 분류 1`] = `
[
  "doSyncActions",
]
`;
